Fixed two-col alignments.

--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@
 .two-col {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  gap: 2rem;
 }
 .footer-top, .footer-bottom {
   width: 100%;
@@ -60,9 +61,6 @@
   width: 50%;
 }
 
-.gap-1 {
-  gap: 0.3rem;
-}
 
 .section-wrapper {
   width: 100%;
